--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server/server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server/server.js"
   },
   "dependencies": {
+    "@ant-design/colors": "^5.0.0",
+    "@ant-design/icons": "^4.3.0",
+    "@reduxjs/toolkit": "^1.4.0",
+    "antd": "^4.8.2",
+    "body-parser": "^1.19.0",
+    "dayjs": "^1.9.6",
+    "express": "^4.17.1",
+    "interweave": "^12.6.0",
     "next": "10.0.1",
+    "nodemon": "^2.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.29.0"
+  },
+  "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "typescript": "^4.0.5"
   }
 }
