--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server/server.js",
+    "dev": "nodemon server/server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server/server.js"
   },
@@ -12,18 +12,28 @@
     "@ant-design/icons": "^4.3.0",
     "@reduxjs/toolkit": "^1.4.0",
     "antd": "^4.8.2",
+    "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.9.6",
     "express": "^4.17.1",
+    "formik": "^2.2.5",
     "interweave": "^12.6.0",
+    "multer": "^1.4.2",
     "next": "10.0.1",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.29.0"
+    "sass": "^1.29.0",
+    "sequelize": "^6.3.5",
+    "sharp": "^0.26.3"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
