--- a/package.json
+++ b/package.json
@@ -15,18 +15,26 @@
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dayjs": "^1.9.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "formik": "^2.2.5",
     "interweave": "^12.6.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "next": "10.0.1",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-cookiecombo": "^1.0.5",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
