--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "next": "10.0.1",
+    "next-redux-wrapper": "^6.0.2",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -38,10 +39,12 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
     "sequelize": "^6.3.5",
-    "sharp": "^0.26.3"
+    "sharp": "^0.26.3",
+    "swr": "^0.3.11"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
@@ -49,6 +52,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.11",
+    "@types/redux-logger": "^3.0.8",
     "typescript": "^4.0.5"
   }
 }
