--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "next": "10.0.1",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
@@ -39,7 +40,9 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
     "sequelize": "^6.3.5",
@@ -47,6 +50,7 @@
     "swr": "^0.3.11"
   },
   "devDependencies": {
+    "@redux-saga/types": "^1.1.0",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
