--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
     "nodemon": "^2.0.6",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-jwt-cookiecombo": "^1.0.5",
-    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react": "17.0.1",
@@ -45,13 +41,14 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sass": "^1.29.0",
-    "sequelize": "^6.3.5",
-    "sharp": "^0.26.3",
-    "swr": "^0.3.11"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
+    "@types/express": "^4.17.11",
+    "@types/js-cookie": "^2.2.6",
     "@types/next": "^9.0.0",
+    "@types/next-redux-saga": "^3.0.2",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
