--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon server/server.js",
+    "dev": "next",
     "build": "next build",
     "start": "NODE_ENV=production node server/server.js"
   },
@@ -13,26 +13,16 @@
     "@reduxjs/toolkit": "^1.4.0",
     "antd": "^4.8.2",
     "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dayjs": "^1.9.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "formik": "^2.2.5",
     "interweave": "^12.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
     "next": "10.0.1",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
-    "nodemon": "^2.0.6",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
     "react": "17.0.1",
-    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
@@ -40,13 +30,11 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.29.0",
-    "sequelize": "^6.3.5"
+    "sass": "^1.29.0"
   },
   "devDependencies": {
     "@redux-saga/types": "^1.1.0",
     "@types/express": "^4.17.11",
-    "@types/js-cookie": "^2.2.6",
     "@types/next": "^9.0.0",
     "@types/next-redux-saga": "^3.0.2",
     "@types/node": "^14.14.7",
